@@ -282,14 +282,14 @@ $t->get_ok('/bridge2stash' => {Cookie => "mojolicious=$session--$hmac"})
   ->status_is(200)->content_is("stash too!!!!!!!!\n");
 
 # Not collecting cookies
-$t->reset_session->ua->cookie_jar->collecting(0);
+$t->reset_session->ua->cookie_jar->ignore(sub {1});
 $t->get_ok('/bridge2stash' => {'X-Flash' => 1})->status_is(200)
   ->content_is("stash too!!!!!!!!\n");
 
 # Still not collecting cookies
 $t->get_ok('/bridge2stash' => {'X-Flash' => 1})->status_is(200)
   ->content_is("stash too!!!!!!!!\n");
-$t->ua->cookie_jar->collecting(1);
+$t->ua->cookie_jar->ignore(sub {0});
 
 # Fresh start without cookies, session or flash
 $t->get_ok('/bridge2stash' => {'X-Flash' => 1})->status_is(200)
